# CommunityLayout

./: .gitignore  README.md  pyproject.toml  setup.py
community_layout/: community_layout.py  layout_class.py
src/community_layout/: __init__.py  layout_class.py
