# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-layout"
version = "1.0.3"
description = "A Python package for community-separated layout of large networkx graphs."
readme = "README.md"
authors = [{ name = "Alex Davies", email = "alexander.davies@bristol.ac.uk" }]
license = { file = "LICENSE" }
classifiers=[
    'Development Status :: 1 - Planning',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3'
]
keywords = ["networkx", "graph", "community", "layout"]
dependencies = ["networkx"]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["datashader", "scikit-image"]

[project.urls]
Homepage = 'https://github.com/neutralpronoun/CommunityLayout.git'
